Method run() Changed resultData Assignment to Integer.valueOf() Instead of new Integer().